--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,6 @@
     "target": "ES6",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "public/mock"],
   "exclude": ["node_modules"]
 }
