--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "mockjs": "^1.1.0",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "unplugin-auto-import": "^0.16.0",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.5"
+    "vite": "^4.3.5",
+    "vite-plugin-mock": "^3.0.0"
   }
 }
