--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
+    "ant-design-vue": "^3.2.20",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.4",
+    "dayjs": "^1.11.7",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
@@ -23,12 +23,9 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
-    "mockjs": "^1.1.0",
+    "less": "^4.1.3",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
-    "unplugin-auto-import": "^0.16.0",
-    "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.5",
-    "vite-plugin-mock": "^3.0.0"
+    "vite": "^4.3.5"
   }
 }
