--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "less": "^4.1.3",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.5"
   }
 }
