--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ant-design-vue": "^3.2.20",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
+    "pdfjs-dist": "^3.7.107",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
